# android_openxr_gles

./: .gitignore  .gitmodules  README.md  initial_setup.sh
common/: assertgl.c  util_debugstr.c  util_debugstr.h  util_egl.c  util_egl.h  util_log.h  util_matrix.c  util_matrix.h  util_oxr.cpp  util_oxr.h  util_render2d.c  util_render2d.h  util_render_target.c  util_shader.c
gl2gridOXR/app/: build.gradle
gl2gridOXR/app/src/main/: AndroidManifest.xml
gl2gridOXR/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_scene.cpp  render_scene.h
gl2gridOXR/app/src/main/res/values/: strings.xml  strings.xml~
gl2handtrackOXR/app/: build.gradle
gl2handtrackOXR/app/src/main/: AndroidManifest.xml
gl2handtrackOXR/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_scene.cpp  render_scene.h  render_stage.cpp
gl2handtrackOXR/app/src/main/res/values/: strings.xml
gl2hittestOXR/app/: build.gradle
gl2hittestOXR/app/src/main/: AndroidManifest.xml
gl2hittestOXR/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  render_imgui.cpp  render_scene.cpp  render_texplate.cpp  render_texplate.h  shapes.cpp  teapot.cpp
gl2hittestOXR/app/src/main/res/values-night/: themes.xml
gl2imguiOXR/app/: build.gradle
gl2imguiOXR/app/src/main/: AndroidManifest.xml
gl2imguiOXR/app/src/main/cpp/: app_engine.cpp  app_engine.h  render_imgui.cpp  render_imgui.h  render_scene.cpp  render_scene.h  render_texplate.h
gl2inputOXR/app/: build.gradle
gl2inputOXR/app/src/main/: AndroidManifest.xml
gl2inputOXR/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  app_engine.cpp  app_engine.h  render_imgui.cpp  render_scene.cpp  render_scene.h  render_stage.cpp  render_stage.h  render_texplate.cpp  teapot.h
gl2passthroughOXR/app/: build.gradle
gl2passthroughOXR/app/src/main/: AndroidManifest.xml
gl2passthroughOXR/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_scene.cpp  render_texplate.cpp
gl2soundOXR/app/: build.gradle
gl2soundOXR/app/src/main/: AndroidManifest.xml
gl2soundOXR/app/src/main/cpp/: CMakeLists.txt  OboePlayer.h  app_engine.cpp  app_engine.h  render_imgui.h  shapes.h
gl2soundOXR/gradle/wrapper/: gradle-wrapper.properties
gl2soundboardOXR/: clean.sh
gl2soundboardOXR/app/: build.gradle
gl2soundboardOXR/app/src/main/: AndroidManifest.xml
gl2soundboardOXR/app/src/main/cpp/: OboePlayer.h  app_engine.cpp  render_scene.cpp  render_scene.h  render_stage.h
gl2teapotOXR/: settings.gradle
gl2teapotOXR/app/: build.gradle
gl2teapotOXR/app/src/main/: AndroidManifest.xml
gl2teapotOXR/app/src/main/cpp/: app_engine.cpp  app_engine.h  render_scene.cpp  render_scene.h
gl2tri3dOXR/app/: build.gradle
gl2tri3dOXR/app/src/main/: AndroidManifest.xml
gl2tri3dOXR/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_scene.cpp  render_scene.h
gl2triOXR/: build.gradle
gl2triOXR/app/: build.gradle
gl2triOXR/app/src/main/: AndroidManifest.xml
gl2triOXR/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_scene.cpp  render_scene.h
(+11 files in other folders)
